# threeWaysMergeSort

./: CMakeLists.txt  LICENSE  README.md  main.cpp
include/: sortingthread.h  widget.h
src/: sortingthread.cpp  widget.cpp
ui/: widget.ui
